--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=LLU Neurosurgery Blog
+SITE_NAME_HEADER=Bick's Notes
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=true
@@ -11,7 +11,7 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
-USE_FULL_RESOLUTION_IMAGES=false
+USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/KStew1017/obsidian-sea-glass-theme/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
