--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { --callout-radius: 8px; --callout-title-opacity: 0.4; --anp-cursor: initial; --bold-weight: 600; --anp-header-margin-value: 0px; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-macos is-frameless is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header outliner-plugin-dnd css-settings-manager anp-td-none ctp-rosepine-light ctp-mocha ctp-accent-light-green ctp-accent-green anp-no-highlight anp-callout-color-toggle anp-custom-checkboxes anp-speech-bubble anp-codeblock-numbers anp-list-toggle anp-table-toggle anp-table-width anp-table-auto anp-toggle-preview anp-header-color-toggle anp-header-margin-toggle anp-h1-red anp-h1-divider anp-h2-teal anp-h2-divider anp-h3-green anp-h4-sapphire anp-h5-sky anp-h6-mauve anp-decoration-toggle anp-bold-yellow anp-italic-yellow anp-highlight-peach anp-canvas-dark-bg anp-colorful-frame anp-pdf-blend-toggle-dark anp-pdf-blend-toggle-light anp-default-rainbow anp-default-tab is-fullscreen is-focused
 USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/Sskki-exe/vanilla-amoled-theme-color/HEAD/theme.css
 BASE_THEME=dark
